objects/USA_Survey_Question__c.object
<CustomObject>
    <description>USA BRIEFCASE object</description>
    <fields>
        <fullName>USA_Briefcase_Survey__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Trivia Survey</label>
        <referenceTo>USA_Survey__c</referenceTo>
        <relationshipLabel>Trivia Questions</relationshipLabel>
        <relationshipName>Briefcase_Survey_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USA_Expected_Answer__c</fullName>
        <label>Expected Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>USA_Help_Text__c</fullName>
        <label>Help Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Highest_Price_Value__c</fullName>
        <label>Highest Price Value</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Lowest_Price_Value__c</fullName>
        <label>Lowest Price Value</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Possible_Values__c</fullName>
        <label>Possible Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>USA_Product_Master__c</referenceTo>
        <relationshipLabel>Briefcase Survey Questions</relationshipLabel>
        <relationshipName>Briefcase_Survey_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>USA_Question_Category__c</fullName>
        <label>Question Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Facings</fullName>
                </value>
                <value>
                    <fullName>Adjacency</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Cold Box</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Question_Header__c</fullName>
        <label>Question Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>USA_Question_Label__c</fullName>
        <label>Question Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>USA_Question_Report_Flag__c</fullName>
        <description>This will allow data warehouse team to identify which objectives we want to include in the reporting, which question in the objective should be used to identify if the program was completed, and also a field to segment mandatory and non mandatory chain objectives.</description>
        <label>Question Report Flag</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Question_Type__c</fullName>
        <label>Question Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Date/Time</fullName>
                </value>
                <value>
                    <fullName>General Long Answer</fullName>
                </value>
                <value>
                    <fullName>Multiple Select Picklist</fullName>
                </value>
                <value>
                    <fullName>Numeric Price Box</fullName>
                </value>
                <value>
                    <fullName>Numeric Text Box</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Radio Button</fullName>
                </value>
                <value>
                    <fullName>Section Header</fullName>
                </value>
                <value>
                    <fullName>Text Box</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USA_Trivia_Feedback__c</fullName>
        <inlineHelpText>Enter feedback after the user submits an answer</inlineHelpText>
        <label>Trivia Feedback</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USA_Trivia_Question_Order__c</fullName>
        <inlineHelpText>The order in which the trivia questions are asked</inlineHelpText>
        <label>Trivia Question Order</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Briefcase Survey Question</label>
    <listViews>
        <fullName>All_Briefcase_Survey_Questions</fullName>
        <columns>NAME</columns>
        <columns>USA_Question_Type__c</columns>
        <columns>USA_Question_Label__c</columns>
        <columns>USA_Question_Header__c</columns>
        <columns>USA_Product__c</columns>
        <columns>USA_Possible_Values__c</columns>
        <columns>USA_Expected_Answer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Briefcase Survey Questions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Briefcase Survey Questions</pluralLabel>
    <recordTypes>
        <fullName>USA_Survey_and_Objective_Questions</fullName>
        <active>true</active>
        <label>Survey and Objective Questions</label>
    </recordTypes>
    <recordTypes>
        <fullName>USA_Trivia_Questions</fullName>
        <active>true</active>
        <label>Trivia Questions</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Prevent_Question_Type_Field_Edits</fullName>
        <active>false</active>
        <description>Prevent editing of the Question Type field once the question has been answered in Salesforce.</description>
        <errorConditionFormula>AND(
 NOT(ISNEW()),
 ISCHANGED( USA_Question_Type__c ),
 USA_Number_of_Answers__c &gt; 0
)</errorConditionFormula>
        <errorDisplayField>USA_Question_Type__c</errorDisplayField>
        <errorMessage>The Question Type for this question cannot be changed since it has already been answered in Briefcase.</errorMessage>
    </validationRules>
</CustomObject>